# moveit_object_attacher

./: CMakeLists.txt  README.md  package.xml
include/moveit_object_attacher/: object_attacher_node.hpp
include/moveit_object_attacher/skills/: add_scene_object_skill.hpp  attach_scene_object_skill.hpp  utils.hpp
src/: object_attacher_node.cpp
src/skills/: add_scene_object_skill.cpp  attach_scene_object_skill.cpp
srv/: AddObj.srv  AttachObj.srv
